Update api server configuration and refactor studygraph application frontend
